--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
     "@types/react-icons": "^3.0.0",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.7",
@@ -26,7 +27,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
