--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/d3-ease": "^1.0.9",
     "@types/react-helmet": "^5.0.15",
     "@types/react-icons": "^3.0.0",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "d3-ease": "^1.0.6",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-layout": "^1.1.22",
