--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
-    "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
