Add all rights reserved to footer and start contact page

--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@types/d3-ease": "^1.0.9",
-    "@types/react-helmet": "^5.0.15",
-    "@types/react-icons": "^3.0.0",
-    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-styled-components": "^1.10.7",
-    "d3-ease": "^1.0.6",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-anchor-links": "^1.1.0",
@@ -24,9 +19,6 @@
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.19",
-    "gatsby-plugin-ts-loader": "^0.1.0",
-    "gatsby-plugin-tslint": "^0.0.2",
-    "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
     "lodash": "^4.17.15",
@@ -37,14 +29,19 @@
     "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
     "react-waypoint": "^9.0.2",
-    "styled-components": "^5.0.1",
-    "ts-loader": "^6.2.1"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-icons": "^3.0.0",
     "@types/react-scroll": "^1.5.4",
+    "gatsby-plugin-ts-loader": "^0.1.0",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-typescript": "^2.2.3",
     "prettier": "^1.19.1",
+    "ts-loader": "^6.2.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-loader": "^3.5.4",
