--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-icons": "^3.0.0",
-    "@types/react-scroll": "^1.5.4",
-    "gatsby-plugin-ts-loader": "^0.1.0",
-    "gatsby-plugin-tslint": "^0.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "babel-preset-gatsby": "^0.5.5",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-typescript": "^2.2.3",
     "prettier": "^1.19.1",
-    "ts-loader": "^6.2.1",
-    "tslint": "^6.0.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-plugin-prettier": "^2.1.0",
-    "tslint-react": "^4.2.0",
     "typescript": "^3.8.3"
   },
   "keywords": [
@@ -59,13 +59,12 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "type-check": "tsc --noEmit",
-    "lint": "tslint --project ."
+    "lint:ts": "./node_modules/typescript/bin/tsc --noEmit --skipLibCheck"
   },
   "repository": {
     "type": "git",
