fix: update react

--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
   "dependencies": {
     "@formspree/react": "^2.2.3",
     "@radix-ui/react-dialog": "^0.0.19",
-    "@react-spring/web": "^9.2.3",
     "@types/styled-components": "^5.0.1",
-    "@types/yup": "^0.26.33",
     "babel-plugin-styled-components": "^1.10.7",
-    "formik": "^2.1.4",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-anchor-links": "^1.1.0",
@@ -26,15 +23,12 @@
     "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
-    "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.0.1",
-    "yup": "^0.28.3"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.23",
