--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "portfolio-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Portfolio Website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "David Zlobinskyy <bureauzlobi@gmail.com>",
   "dependencies": {
     "@formspree/react": "^2.2.3",
     "@radix-ui/react-dialog": "^0.0.19",
-    "@types/styled-components": "^5.0.1",
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-anchor-links": "^1.1.0",
-    "gatsby-plugin-layout": "^1.1.22",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-plugin-styled-components": "^3.1.19",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby": "^3.9.0",
+    "gatsby-plugin-image": "^1.9.0",
+    "gatsby-plugin-manifest": "^3.9.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-sitemap": "^4.5.0",
+    "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-transformer-sharp": "^3.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -34,19 +28,18 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.2",
-    "@types/react-icons": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
-    "babel-preset-gatsby": "^0.5.5",
+    "@types/styled-components": "^5.1.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.6.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
-    "gatsby-plugin-eslint": "^2.0.8",
-    "gatsby-plugin-typescript": "^2.2.3",
-    "prettier": "^1.19.1",
-    "typescript": "^3.8.3"
+    "gatsby-plugin-eslint": "^3.0.0",
+    "gatsby-plugin-typescript": "^3.9.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "keywords": [
     "gatsby"
